Add surefire config so we have happy netty for java tests too.