@@ -583,6 +583,15 @@
 	    </compilerArgs>
 	  </configuration>
 	</plugin>
+	<!-- Surefire runs all Java tests -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+	  <configuration>
+	    <argLine>-ea --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED -Djdk.reflect.useDirectMethodHandle=false --add-opens=java.base/java.lang.reflect=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true</argLine>
+	  </configuration>
+	</plugin>
 	<plugin>
 	  <groupId>org.scalatest</groupId>
 	  <artifactId>scalatest-maven-plugin</artifactId>
